--- a/app_1/static/app_1/main.css
+++ b/app_1/static/app_1/main.css
@@ -2,12 +2,53 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 36px;
-}
-
-ol {
-    margin-left: 50px;
+    font-family: sans-serif;
 }
 
 body {
+    background-color: var(--main_color);
+}
+
+header {
+    background-color: var(--additional_color);
+    box-shadow: 0 2px 10px 0 grey;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.app-logo {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.app-logo i {
+    margin-right: 10px;
+    font-size: 36px;
+    color: var(--primary_color);
+}
+
+.base-button {
+    background-color: var(--primary_color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    text-decoration: none;
+    color: aliceblue;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.base-button:hover {
+    background-color: var(--info_color);
+    color: white;
+    box-shadow: 0 2px 5px grey;
+}
+
+.auth-state {
+    display: flex;
+    gap:5px;
 }
