--- a/app_1/templates/app_1/about.html
+++ b/app_1/templates/app_1/about.html
@@ -2,4 +2,7 @@
 
 {% block content %}
     <span>456</span>
+{% for item in genres %}
+ <div>{{ item.format_name }}</div>
+{%endfor%}
 {% endblock %}
